--- a/Carssier/Carssier_Core/nbproject/project.properties
+++ b/Carssier/Carssier_Core/nbproject/project.properties
@@ -61,7 +61,8 @@ javac.classpath=\
     ${file.reference.v4l4j.jar}:\
     ${file.reference.xmlgraphics-commons-1.4.jar}:\
     ${reference.UniversalHTTPServer.jar}:\
-    ${reference.UniversalWebSocket.jar}
+    ${reference.UniversalWebSocket.jar}:\
+    ${reference.Carssier_AccountBook.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -90,6 +91,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
 platform.active=default_platform
+project.Carssier_AccountBook=../../../Carssier/Carssier_AccountBook
 project.Carssier_DataBase=../Carssier_DataBase
 project.JSSDBLight=../../JSSDBLight
 project.UniversalBarcodeGenerator=../../UniversalBarcodeGenerator
@@ -100,6 +102,7 @@ project.UniversalHTTPServer=../../UniversalHTTPServer
 project.UniversalPrintService=../../UniversalPrintService
 project.UniversalUIWebKit=../../UniversalUIWebKit
 project.UniversalWebSocket=../../UniversalWebSocket
+reference.Carssier_AccountBook.jar=${project.Carssier_AccountBook}/dist/Carssier_AccountBook.jar
 reference.Carssier_DataBase.jar=${project.Carssier_DataBase}/dist/Carssier_DataBase.jar
 reference.JSSDBLight.jar=${project.JSSDBLight}/dist/JSSDBLight.jar
 reference.UniversalBarcodeGenerator.jar=${project.UniversalBarcodeGenerator}/dist/UniversalBarcodeGenerator.jar
