--- a/Carssier/Carssier_AccountBook/nbproject/project.properties
+++ b/Carssier/Carssier_AccountBook/nbproject/project.properties
@@ -31,8 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.JSSDBLight.jar}:\
-    ${reference.UniversalBusinessObjects.jar}:\
     ${reference.UniversalDataBase.jar}:\
+    ${reference.UniversalBusinessObjects.jar}:\
     ${reference.Carssier_DataBase.jar}:\
     ${reference.Carssier_Core.jar}:\
     ${reference.UniversalUIWebKit.jar}:\
@@ -70,7 +70,7 @@ project.Carssier_DataBase=../Carssier_DataBase
 project.Carssier_Loader=../Carssier_Loader
 project.Carssier_Order_New=../Carssier_Order_New
 project.JSSDBLight=../../JSSDBLight
-project.UniversalBusinessObjects=../../UniversalBusinessObjects
+project.UniversalBusinessObjects=../../../UniversalBusinessObjects
 project.UniversalDataBase=../../UniversalDataBase
 project.UniversalUIWebKit=../../UniversalUIWebKit
 reference.Carssier_Core.jar=${project.Carssier_Core}/dist/Carssier_Core.jar
