--- a/Carssier/Carssier_WebModule/nbproject/private/private.properties
+++ b/Carssier/Carssier_WebModule/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.home=/home/developer/bin/tomcat/apache-tomcat-7.0.29
 j2ee.server.instance=tomcat70:home=/home/developer/bin/tomcat/apache-tomcat-7.0.29
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/developer/.netbeans/7.2/build.properties
+user.properties.file=/home/toor/.netbeans/7.1.2/build.properties
