--- a/TechCard_Listener/nbproject/project.properties
+++ b/TechCard_Listener/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TechCard_Listener
+application.vendor=toor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,10 +25,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/TechCard_Listener.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.JSSDBLight.jar}:\
+    ${reference.UniversalDataBase.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +58,10 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.JSSDBLight=../../JSSDB
+project.UniversalDataBase=../../UniversalDataBase
+reference.JSSDBLight.jar=${project.JSSDBLight}/dist/JSSDBLight.jar
+reference.UniversalDataBase.jar=${project.UniversalDataBase}/dist/UniversalDataBase.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
