--- a/CatalogMaker/nbproject/project.properties
+++ b/CatalogMaker/nbproject/project.properties
@@ -28,8 +28,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${reference.JSSDBLight.jar}:\
     ${reference.UniversalDataBase.jar}:\
+    ${reference.JSSDBLight.jar}:\
     ${reference.UniversalNet.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -57,7 +57,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JSSDBLight=../../JSSDBLight
+project.JSSDBLight=../../JSSDB
 project.UniversalDataBase=../../UniversalDataBase
 project.UniversalNet=../../UniversalNet
 reference.JSSDBLight.jar=${project.JSSDBLight}/dist/JSSDBLight.jar
