--- a/TechCardGUI/nbproject/project.properties
+++ b/TechCardGUI/nbproject/project.properties
@@ -48,7 +48,8 @@ javac.classpath=\
     ${file.reference.tomcat-embed-jasper.jar}:\
     ${file.reference.tomcat-embed-logging-juli.jar}:\
     ${file.reference.tomcat-embed-logging-log4j.jar}:\
-    ${reference.JSSDBLight.jar}
+    ${reference.JSSDBLight.jar}:\
+    ${reference.TechCard_Reports.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,6 +80,7 @@ no.dependencies=true
 platform.active=default_platform
 project.JSSDBLight=../../JSSDB
 project.TechCard=../TechCard
+project.TechCard_Reports=../../TechCard_Reports
 project.UniversalBusinessObjects=../UniversalBusinessObjects
 project.UniversalDataBase=../UniversalDataBase
 project.UniversalHTTPServer=../UniversalHTTPServer
@@ -86,6 +88,7 @@ project.UniversalUIWebKit=../UniversalUIWebKit
 project.UniversalWebSocket=../UniversalWebSocket
 reference.JSSDBLight.jar=${project.JSSDBLight}/dist/JSSDBLight.jar
 reference.TechCard.jar=${project.TechCard}/dist/TechCard.jar
+reference.TechCard_Reports.jar=${project.TechCard_Reports}/dist/TechCard_Reports.jar
 reference.UniversalBusinessObjects.jar=${project.UniversalBusinessObjects}/dist/UniversalBusinessObjects.jar
 reference.UniversalDataBase.jar=${project.UniversalDataBase}/dist/UniversalDataBase.jar
 reference.UniversalHTTPServer.jar=${project.UniversalHTTPServer}/dist/UniversalHTTPServer.jar
