--- a/TechCardGUI/nbproject/project.properties
+++ b/TechCardGUI/nbproject/project.properties
@@ -80,7 +80,7 @@ no.dependencies=true
 platform.active=default_platform
 project.JSSDBLight=../../JSSDB
 project.TechCard=../TechCard
-project.TechCard_Reports=../../TechCard_Reports
+project.TechCard_Reports=../TechCard_Reports
 project.UniversalBusinessObjects=../UniversalBusinessObjects
 project.UniversalDataBase=../UniversalDataBase
 project.UniversalHTTPServer=../UniversalHTTPServer
