--- a/TechCard_Reports/nbproject/project.properties
+++ b/TechCard_Reports/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TechCard_Reports
+application.vendor=toor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,10 +25,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/TechCard_Reports.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.UniversalUIWebKit.jar}:\
+    ${reference.UniversalWebSocket.jar}:\
+    ${reference.UniversalDataBase.jar}:\
+    ${reference.TechCard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +60,14 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.TechCard=../TechCard
+project.UniversalDataBase=../UniversalDataBase
+project.UniversalUIWebKit=../UniversalUIWebKit
+project.UniversalWebSocket=../UniversalWebSocket
+reference.TechCard.jar=${project.TechCard}/dist/TechCard.jar
+reference.UniversalDataBase.jar=${project.UniversalDataBase}/dist/UniversalDataBase.jar
+reference.UniversalUIWebKit.jar=${project.UniversalUIWebKit}/dist/UniversalUIWebKit.jar
+reference.UniversalWebSocket.jar=${project.UniversalWebSocket}/dist/UniversalWebSocket.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
